--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <!--Start Activity-->
     <string name="tv_hello_text">Android Basics</string>
     <string name="btn_calc_text">Calculator</string>
+    <string name="btn_rates_text">Rates</string>
+    <string name="btn_chat_text">Chat</string>
     <string name="btn_exit_text">Exit</string>
 
     <!--Calculator-->
@@ -40,6 +42,17 @@
     <string name="score_text">Score\n%d</string>
     <string name="best_score_text">Best\n%d</string>
 
+    <!--Rates-->
+    <string name="rates_title">Currency rates</string>
+
+
+    <!--Chat-->
+    <string name="chat_name_title">Username</string>
+    <string name="chat_default_user">JormmungandM</string>
+    <string name="chat_default_message">Hello!</string>
+    <string name="chat_message_title">Msg:</string>
+    <string name="channel_name">Chat</string>
+    <string name="channel_description">Chat Channel</string>
 
     <!--Errors-->
     <string name="calc_division_by_zero_error">Cannot divide by zero</string>
